@@ -17,7 +17,6 @@
 
 open Format
 open Misc
-open Longident
 open Types
 open Toploop
 
@@ -208,28 +207,12 @@ let extract_target_parameters ty =
         Some (path, args)
   | _ -> None
 
-type 'a printer_type_new = Format.formatter -> 'a -> unit
-type 'a printer_type_old = 'a -> unit
-
-let printer_type ppf typename =
-  let printer_type =
-    match
-      Env.find_type_by_name
-        (Ldot(Lident "Topdirs", typename)) !toplevel_env
-    with
-    | path, _ -> path
-    | exception Not_found ->
-        fprintf ppf "Cannot find type Topdirs.%s.@." typename;
-        raise Exit
-  in
-  printer_type
-
-let match_simple_printer_type desc printer_type =
+let match_simple_printer_type desc make_printer_type =
   Ctype.begin_def();
   let ty_arg = Ctype.newvar() in
   begin try
     Ctype.unify !toplevel_env
-      (Ctype.newconstr printer_type [ty_arg])
+      (make_printer_type ty_arg)
       (Ctype.instance desc.val_type);
   with Ctype.Unify _ ->
     raise Bad_printing_function
@@ -238,17 +221,15 @@ let match_simple_printer_type desc printer_type =
   Ctype.generalize ty_arg;
   (ty_arg, None)
 
-let match_generic_printer_type desc path args printer_type =
+let match_generic_printer_type desc path args make_printer_type =
   Ctype.begin_def();
   let args = List.map (fun _ -> Ctype.newvar ()) args in
   let ty_target = Ctype.newty (Tconstr (path, args, ref Mnil)) in
   let ty_args =
-    List.map (fun ty_var -> Ctype.newconstr printer_type [ty_var]) args in
+    List.map (fun ty_var -> make_printer_type ty_var) args in
   let ty_expected =
-    List.fold_right
-      (fun ty_arg ty -> Ctype.newty (Tarrow (Asttypes.Nolabel, ty_arg, ty,
-                                             commu_var ())))
-      ty_args (Ctype.newconstr printer_type [ty_target]) in
+    List.fold_right Topprinters.type_arrow
+      ty_args (make_printer_type ty_target) in
   begin try
     Ctype.unify !toplevel_env
       ty_expected
@@ -262,25 +243,23 @@ let match_generic_printer_type desc path args printer_type =
     raise Bad_printing_function;
   (ty_expected, Some (path, ty_args))
 
-let match_printer_type ppf desc =
-  let printer_type_new = printer_type ppf "printer_type_new" in
-  let printer_type_old = printer_type ppf "printer_type_old" in
+let match_printer_type desc =
   try
-    (match_simple_printer_type desc printer_type_new, false)
+    (match_simple_printer_type desc Topprinters.printer_type_new, false)
   with Bad_printing_function ->
     try
-      (match_simple_printer_type desc printer_type_old, true)
+      (match_simple_printer_type desc Topprinters.printer_type_old, true)
     with Bad_printing_function as exn ->
       match extract_target_parameters desc.val_type with
       | None -> raise exn
       | Some (path, args) ->
-          (match_generic_printer_type desc path args printer_type_new,
-           false)
+          (match_generic_printer_type
+            desc path args Topprinters.printer_type_new, false)
 
 let find_printer_type ppf lid =
   match Env.find_value_by_name lid !toplevel_env with
   | (path, desc) -> begin
-    match match_printer_type ppf desc with
+    match match_printer_type desc with
     | (ty_arg, is_old_style) -> (ty_arg, path, is_old_style)
     | exception Bad_printing_function ->
       fprintf ppf "%a has the wrong type for a printing function.@."
