@@ -2,7 +2,7 @@
 (*                                                                        *)
 (*                                 OCaml                                  *)
 (*                                                                        *)
-(*             Florian Angeletti, projet Cambium, Inria Paris             *)
+(*                   Sebastien Hinderer, Tarides, Paris                   *)
 (*                                                                        *)
 (*   Copyright 2022 Institut National de Recherche en Informatique et     *)
 (*     en Automatique.                                                    *)
@@ -13,5 +13,25 @@
 (*                                                                        *)
 (**************************************************************************)
 
-let () =
-  Topcommon.load_topdirs_signature ()
+(* Infrastructure to support user-defined printers in toplevels and debugger *)
+
+type printer_type = Types.type_expr -> Types.type_expr
+
+let type_arrow ta tb =
+  Ctype.newty (Tarrow (Asttypes.Nolabel, ta, tb, Types.commu_var ()))
+
+let type_formatter () =
+  let format = Path.Pident (Ident.create_persistent "Stdlib__Format") in
+  Ctype.newconstr (Path.Pdot(format, "formatter")) []
+
+let type_unit = Predef.type_unit
+
+(*
+  type 'a printer_type_old = 'a -> unit
+  type 'a printer_type_new = Format.formatter -> 'a -> unit
+*)
+let printer_type_old alpha =
+  type_arrow alpha type_unit
+
+let printer_type_new alpha =
+  type_arrow (type_formatter ()) (type_arrow alpha type_unit)
